--- a/src/app/components/panel-uzytkownika/panel-uzytkownika.component.html
+++ b/src/app/components/panel-uzytkownika/panel-uzytkownika.component.html
@@ -4,6 +4,7 @@
       <a mat-list-item *ngIf="zalogowanyUzytkownik" [routerLink]="['/uzytkownik/profil/', zalogowanyUzytkownik.login]">
         Pokaż profil </a>
       <a mat-list-item routerLink="/oferta/wystaw"> Wystaw ofertę </a>
+      <a mat-list-item routerLink="/uzytkownik/oferty"> Zarządzaj ofertami </a>
       <!--<a mat-list-item routerLink="/oferta/edytuj"> Edytuj ofertę </a>-->
       <a mat-list-item routerLink="/uzytkownik/edytuj"> Edytuj profil </a>
       <!--<a mat-list-item routerLink="/wiadomosc/wyslij"> Napisz wiadomość </a>-->
