UC: Zlec transport przesylki - Dodanie formularza zlecania transportu przesylki.

--- a/src/app/components/przejrzyj-oferte/przejrzyj-oferte.component.html
+++ b/src/app/components/przejrzyj-oferte/przejrzyj-oferte.component.html
@@ -55,6 +55,7 @@
         </div>
       </div>
       <br/>
+      <a mat-raised-button color="primary" [routerLink]="['/oferta/zlec', id]">Zleć transport przesylki</a>
       <button mat-raised-button color="warn" (click)="zglosOferte()">Zgłoś oferte</button>
       <button *ngIf="zalogowanyUzytkownik && zalogowanyUzytkownik.rola === 'ROLE_ADMIN'" mat-raised-button
               color="warn" (click)="zablokujOferte(oferta)">Zablokuj ofertę
