--- a/src/app/components/zarzadzaj-ofertami/zarzadzaj-ofertami.component.html
+++ b/src/app/components/zarzadzaj-ofertami/zarzadzaj-ofertami.component.html
@@ -61,7 +61,6 @@
             <mat-chip *ngIf="element.rozmiaryPaczek.length > 2">i {{ element.rozmiaryPaczek.length - 2 }} więcej...
             </mat-chip>
           </mat-chip-list>
-          <!--<span *ngIf="element.maksymalnaWagaPaczki"><em>Maksymalna waga paczki</em> {{ element?.maksymalnaWagaPaczki }}kg</span>-->
         </mat-cell>
       </ng-container>
 
@@ -69,11 +68,13 @@
         <mat-header-cell *matHeaderCellDef flex-gt-xs="10"> Akcje</mat-header-cell>
         <mat-cell *matCellDef="let element" flex-gt-xs="10">
           <a matTooltip="Edytuj ofertę" title="Edytuj ofertę" [routerLink]="['/oferta/edytuj', element.id]"
-             mat-icon-button color="accent" [disabled]="!element.aktywna || element.zablokowana">
+             mat-icon-button color="accent"
+             [disabled]="!element.aktywna || element.zablokowana || element.zleceniaTransportu.length > 0">
             <mat-icon aria-label="Edytuj ofertę">edit</mat-icon>
           </a>
           <button matTooltip="Zdejmij ofertę" title="Zdejmij ofertę" mat-icon-button color="warn"
-                  (click)="zdejmijOferte(element)" [disabled]="!element.aktywna || element.zablokowana">
+                  (click)="zdejmijOferte(element)"
+                  [disabled]="!element.aktywna || element.zablokowana || element.dataGodzinaWyjazdu < date">
             <mat-icon aria-label="Zdejmij ofertę">visibility_off</mat-icon>
           </button>
         </mat-cell>
