--- a/src/app/components/logowanie/logowanie.component.html
+++ b/src/app/components/logowanie/logowanie.component.html
@@ -6,8 +6,8 @@
   <mat-card-content>
     <form class="example-form" [formGroup]="logowanieForm">
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Login" formControlName="login" required>
-        <mat-hint>Wpisz login!</mat-hint>
+        <input matInput placeholder="Login" #inputLogin maxlength="30" formControlName="login" required>
+        <mat-hint>Maksymalna ilość znaków 30</mat-hint>
         <mat-error
           *ngIf="this.logowanieForm.controls['login'].invalid ">
           Login ma za dużo znaków, maksymalna liczba znaków wynosi 30
@@ -15,11 +15,12 @@
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <input matInput type="password" placeholder="Hasło" formControlName="haslo" required>
-        <mat-hint>Wpisz hasło!</mat-hint>
+        <input matInput type="password" #inputPassword minlength="8" #inputPassword maxlength="30" placeholder="Hasło"
+               formControlName="haslo" required>
+        <mat-hint>Liczba minimum 8 znaków</mat-hint>
         <mat-error
           *ngIf="this.logowanieForm.controls['haslo'].invalid ">
-          Hasło musi mieć od 8 do 30 znaków
+          Hasło musi mieć minimum 8 zmnaków
         </mat-error>
       </mat-form-field>
       <br><br>
