--- a/src/app/components/edycja-profilu-uzytkownika/edycja-profilu-uzytkownika.component.html
+++ b/src/app/components/edycja-profilu-uzytkownika/edycja-profilu-uzytkownika.component.html
@@ -6,7 +6,8 @@
   <mat-card-content>
     <form class="example-form" [formGroup]="edytujProfilUzytkownikaForm">
       <mat-form-field class="example-full-width">
-        <input matInput type="password" placeholder="Hasło" formControlName="haslo" required
+        <input matInput type="password" #inputPassword minlength="8" #inputPassword maxlength="30" placeholder="Hasło"
+               formControlName="haslo"
                (change)="weryfikujPHaslo()">
         <mat-hint>Wpisz hasło!</mat-hint>
         <mat-error
@@ -15,7 +16,8 @@
         </mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <input matInput type="password" placeholder="Powtórz Hasło" formControlName="phaslo" required
+        <input matInput type="password" placeholder="Powtórz Hasło" #inputPassword minlength="8" #inputPassword
+               maxlength="30" formControlName="phaslo"
                (change)="weryfikujHaslo()">
         <mat-hint>Potwierdź hasło!</mat-hint>
         <mat-error *ngIf="this.edytujProfilUzytkownikaForm.controls['phaslo'].invalid">
@@ -36,7 +38,8 @@
         </mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Imię" formControlName="imie" [value]="zalogowanyUzytkownik.imie">
+        <input matInput placeholder="Imię" formControlName="imie" #inputImię maxlength="2" #inputImię maxlength="30"
+               [value]="zalogowanyUzytkownik.imie">
         <mat-hint>Wpisz imię!</mat-hint>
         <mat-error
           *ngIf="this.edytujProfilUzytkownikaForm.controls['imie'].invalid">
@@ -44,7 +47,8 @@
         </mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Nazwisko" formControlName="nazwisko" [value]="zalogowanyUzytkownik.nazwisko">
+        <input matInput placeholder="Nazwisko" formControlName="nazwisko" #inputNazwisko maxlength="2" #inputNazwisko
+               maxlength="30" [value]="zalogowanyUzytkownik.nazwisko">
         <mat-hint>Wpisz nazwisko!</mat-hint>
         <mat-error
           *ngIf="this.edytujProfilUzytkownikaForm.controls['nazwisko'].invalid">
@@ -52,7 +56,7 @@
         </mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <input matInput [matDatepicker]="picker" placeholder="Data urodzenia" required formControlName="dataUrodzenia">
+        <input matInput [matDatepicker]="picker" placeholder="Data urodzenia" formControlName="dataUrodzenia">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
         <mat-error
@@ -84,7 +88,8 @@
         <mat-hint>Wpisz ulicę!</mat-hint>
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Nr telefonu" formControlName="numerTelefonu"
+        <input matInput placeholder="Nr telefonu" #input minlength="9" #input maxlength="15"
+               formControlName="numerTelefonu"
                [value]="zalogowanyUzytkownik.numerTelefonu">
         <mat-hint>Wpisz nr telefonu!</mat-hint>
         <mat-error
