Rejestracja - Dodanie walidacji daty urodzenia, zablokowanie możliwości wpisywania jej ręcznie, ograniczenie do aktualnej daty.

--- a/src/app/components/rejestracja/rejestracja.component.html
+++ b/src/app/components/rejestracja/rejestracja.component.html
@@ -65,8 +65,7 @@
         </mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <input matInput [matDatepicker]="picker" placeholder="Data urodzenia" required formControlName="dataUrodzenia"
-               required>
+        <input matInput [max]="maxDate" [matDatepicker]="picker" placeholder="Data urodzenia" readonly="readonly" formControlName="dataUrodzenia" required>
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
         <mat-error
