Dodanie loga i wyboru wszystkich miast przy rejestracji i edytowaniu profilu.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,8 @@
       <mat-icon>menu</mat-icon>
     </button>
     <div td-toolbar-content layout="row" layout-align="start center" flex>
-      <span>Fast Courier</span>
+      <img src="/assets/logo.png" alt="Logo FastCourier"/>
+      <span hide-xs class="tc-blue-500 mat-subhead">FastCourier</span>
       <span flex></span>
       <span>Magical Solutions</span>
       <button class="overflow-visible" mat-icon-button [matMenuTriggerFor]="notificationsMenu"
