--- a/src/app/components/edycja-profilu-uzytkownika/edycja-profilu-uzytkownika.component.html
+++ b/src/app/components/edycja-profilu-uzytkownika/edycja-profilu-uzytkownika.component.html
@@ -74,14 +74,9 @@
         <mat-hint>Wybierz jedno z województw występujących na liście</mat-hint>
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <mat-select matInput placeholder="Miejscowość" formControlName="miejscowosc" [value]="zalogowanyUzytkownik.miejscowosc">
-          <mat-option value="Warszawa">Warszawa</mat-option>
-          <mat-option value="Kraków">Kraków</mat-option>
-          <mat-option value="Pruszków">Pruszków</mat-option>
-          <mat-option value="Halinów">Halinów</mat-option>
-          <mat-option value="Ostrów Mazowiecka">Ostrów Mazowiecka</mat-option>
-        </mat-select>
-        <mat-hint>Wybierz jedno z miast występujących na liście</mat-hint>
+        <input matInput ngui-auto-complete placeholder="Miejscowość" formControlName="miejscowosc"
+               [source]="miejscowosciFetchUrl" min-chars="3">
+        <mat-hint>Wpisz przynajmniej trzy litery i wybierz jedno z miasto występujących na liście</mat-hint>
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Ulica" formControlName="ulica" [value]="zalogowanyUzytkownik.ulica">
