--- a/src/app/components/rejestracja/rejestracja.component.html
+++ b/src/app/components/rejestracja/rejestracja.component.html
@@ -83,7 +83,9 @@
         </mat-select>
       </mat-form-field>
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Miejscowość" formControlName="miejscowosc" required>
+        <input matInput ngui-auto-complete placeholder="Miejscowość" formControlName="miejscowosc"
+               [source]="miejscowosciFetchUrl" min-chars="3">
+        <mat-hint>Wpisz przynajmniej trzy litery i wybierz jedno z miasto występujących na liście</mat-hint>
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Ulica" formControlName="ulica" required>
