--- a/src/app/components/zarzadzaj-transakcjami/zarzadzaj-transakcjami.component.html
+++ b/src/app/components/zarzadzaj-transakcjami/zarzadzaj-transakcjami.component.html
@@ -17,7 +17,7 @@
                                                                color="accent">
           <mat-icon aria-label="Przejdź do oferty">assignment</mat-icon>
         </a>
-          {{ element.dotyczyOferty.tytul }} <br/><a
+          <span [style.text-decoration]="element.dotyczyOferty.zablokowana ? 'line-through' : 'none'">{{ element.dotyczyOferty.tytul }}</span><br/><a
             [routerLink]="['/uzytkownik/profil', element.dotyczyOferty.ofertaUzytkownika[0].login]" target="_blank"
             title="Przejdź do profilu użytkownika" mat-icon-button color="primary">
             <mat-icon aria-label="Przejdź do profilu">face</mat-icon>
@@ -40,15 +40,21 @@
       <ng-container matColumnDef="status">
         <mat-header-cell *matHeaderCellDef flex-gt-xs="20"> Status</mat-header-cell>
         <mat-cell *matCellDef="let element" flex-gt-xs="20">
-          <span *ngIf="element.statusZlecenia === statusZlecenia.DOSTARCZONO">Dostarczono</span>
-          <span
-            *ngIf="element.statusZlecenia === statusZlecenia.DO_ROZPATRZENIA && element.dataGodzinaWyjazdu < dateNow">Odrzucono</span>
-          <span
-            *ngIf="element.statusZlecenia === statusZlecenia.DO_ROZPATRZENIA && element.dataGodzinaWyjazdu >= dateNow">Czeka na rozpatrzenie</span>
-          <span *ngIf="element.statusZlecenia === statusZlecenia.ODRZUCONO">Odrzucono</span>
-          <span *ngIf="element.statusZlecenia === statusZlecenia.ZAAKCEPTOWANO && element.dataGodzinaWyjazdu < dateNow">W trakcie realizacji</span>
-          <span
-            *ngIf="element.statusZlecenia === statusZlecenia.ZAAKCEPTOWANO && element.dataGodzinaWyjazdu >= dateNow">Czeka na realizację</span>
+          <span *ngIf="element.dotyczyOferty.zablokowana; else elseBlock">
+            Anulowano
+          </span>
+          <ng-template #elseBlock>
+            <span *ngIf="element.statusZlecenia === statusZlecenia.DOSTARCZONO">Dostarczono</span>
+            <span
+              *ngIf="element.statusZlecenia === statusZlecenia.DO_ROZPATRZENIA && element.dataGodzinaWyjazdu < dateNow">Odrzucono</span>
+            <span
+              *ngIf="element.statusZlecenia === statusZlecenia.DO_ROZPATRZENIA && element.dataGodzinaWyjazdu >= dateNow">Czeka na rozpatrzenie</span>
+            <span *ngIf="element.statusZlecenia === statusZlecenia.ODRZUCONO">Odrzucono</span>
+            <span
+              *ngIf="element.statusZlecenia === statusZlecenia.ZAAKCEPTOWANO && element.dataGodzinaWyjazdu < dateNow">W trakcie realizacji</span>
+            <span
+              *ngIf="element.statusZlecenia === statusZlecenia.ZAAKCEPTOWANO && element.dataGodzinaWyjazdu >= dateNow">Czeka na realizację</span>
+          </ng-template>
         </mat-cell>
       </ng-container>
 
@@ -77,7 +83,7 @@
                                                                color="accent">
           <mat-icon aria-label="Przejdź do oferty">assignment</mat-icon>
         </a>
-          {{ element.dotyczyOferty.tytul }}
+          <span [style.text-decoration]="element.dotyczyOferty.zablokowana ? 'line-through' : 'none'">{{ element.dotyczyOferty.tytul }}</span>
         </mat-cell>
       </ng-container>
 
@@ -107,11 +113,15 @@
       <ng-container matColumnDef="status">
         <mat-header-cell *matHeaderCellDef flex-gt-xs="20"> Status</mat-header-cell>
         <mat-cell *matCellDef="let element" flex-gt-xs="20">
-          <span *ngIf="element.statusZlecenia === statusZlecenia.DOSTARCZONO">Dostarczono</span>
-          <span
-            *ngIf="element.statusZlecenia === statusZlecenia.DO_ROZPATRZENIA && element.dataGodzinaWyjazdu < dateNow">Odrzucono</span>
-          <span
-            *ngIf="element.statusZlecenia === statusZlecenia.DO_ROZPATRZENIA && element.dataGodzinaWyjazdu >= dateNow">
+          <span *ngIf="element.dotyczyOferty.zablokowana; else elseBlock">
+            Anulowano
+          </span>
+          <ng-template #elseBlock>
+            <span *ngIf="element.statusZlecenia === statusZlecenia.DOSTARCZONO">Dostarczono</span>
+            <span
+              *ngIf="element.statusZlecenia === statusZlecenia.DO_ROZPATRZENIA && element.dataGodzinaWyjazdu < dateNow">Odrzucono</span>
+            <span
+              *ngIf="element.statusZlecenia === statusZlecenia.DO_ROZPATRZENIA && element.dataGodzinaWyjazdu >= dateNow">
             <button matTooltip="Akceptuj transakcję" title="Akceptuj transakcję" mat-icon-button color="primary"
                     (click)="zmienStatus(element, statusZlecenia.ZAAKCEPTOWANO)">
               <mat-icon aria-label="Akceptuj transakcję">thumb_up</mat-icon>
@@ -121,15 +131,17 @@
               <mat-icon aria-label="Odrzuć transakcję">thumb_down</mat-icon>
             </button>
           </span>
-          <span *ngIf="element.statusZlecenia === statusZlecenia.ODRZUCONO">Odrzucono</span>
-          <span *ngIf="element.statusZlecenia === statusZlecenia.ZAAKCEPTOWANO && element.dataGodzinaWyjazdu < dateNow">
+            <span *ngIf="element.statusZlecenia === statusZlecenia.ODRZUCONO">Odrzucono</span>
+            <span
+              *ngIf="element.statusZlecenia === statusZlecenia.ZAAKCEPTOWANO && element.dataGodzinaWyjazdu < dateNow">
             <button matTooltip="Oznacz jako dostarczoną" title="Oznacz jako dostarczoną" mat-icon-button color="primary"
                     (click)="zmienStatus(element, statusZlecenia.DOSTARCZONO)">
               <mat-icon aria-label="Oznacz jako dostarczoną">markunread_mailbox</mat-icon>
             </button>
           </span>
-          <span
-            *ngIf="element.statusZlecenia === statusZlecenia.ZAAKCEPTOWANO && element.dataGodzinaWyjazdu >= dateNow">Czeka na realizację</span>
+            <span
+              *ngIf="element.statusZlecenia === statusZlecenia.ZAAKCEPTOWANO && element.dataGodzinaWyjazdu >= dateNow">Czeka na realizację</span>
+          </ng-template>
         </mat-cell>
       </ng-container>
 
